--- a/Gargantua/package.json
+++ b/Gargantua/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Gargantua",
+  "name": "gargantua",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -9,9 +9,14 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "npm": "^7.7.5",
     "nuxt": "^2.14.0"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^2.1.0"
+    "@nuxtjs/color-mode": "^2.0.5",
+    "@nuxtjs/tailwindcss": "^2.1.1",
+    "nuxt": "^2.15.3",
+    "postcss": "^7.0.35",
+    "tailwindcss-dark-mode": "^1.1.7"
   }
 }
