--- a/Gargantua/package.json
+++ b/Gargantua/package.json
@@ -9,14 +9,17 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.1",
     "npm": "^7.7.5",
-    "nuxt": "^2.14.0"
+    "nuxt": "^2.15.0"
   },
   "devDependencies": {
     "@nuxtjs/color-mode": "^2.0.5",
-    "@nuxtjs/tailwindcss": "^2.1.1",
-    "nuxt": "^2.15.3",
+    "@nuxtjs/tailwindcss": "^3.4.0",
+    "fibers": "^5.0.0",
     "postcss": "^7.0.35",
+    "sass": "^1.32.8",
+    "sass-loader": "^10.1.1",
     "tailwindcss-dark-mode": "^1.1.7"
   }
 }
