--- a/sagittarius_a/package.json
+++ b/sagittarius_a/package.json
@@ -8,9 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "framer-motion": "^4.1.17",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-spring": "^8.x",
+    "@react-spring/parallax": "*",
+    "@react-spring/web": "*"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
