--- a/sagittarius_a/package.json
+++ b/sagittarius_a/package.json
@@ -8,14 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "@react-spring/parallax": "*",
-    "@react-spring/web": "*",
     "framer-motion": "^4.1.17",
     "next": "latest",
     "popmotion": "^9.3.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-spring": "^8.x",
+    "react-scroll": "^1.8.2",
     "react-transition-group": "^4.4.2"
   },
   "devDependencies": {
