--- a/sagittarius_a/package.json
+++ b/sagittarius_a/package.json
@@ -8,13 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@matejmazur/react-katex": "^3.1.3",
     "framer-motion": "^4.1.17",
+    "katex": "^0.13.11",
     "next": "latest",
     "popmotion": "^9.3.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-markdown": "^6.0.2",
     "react-scroll": "^1.8.2",
-    "react-transition-group": "^4.4.2"
+    "react-syntax-highlighter": "^15.4.3",
+    "react-transition-group": "^4.4.2",
+    "rehype-katex": "^5.0.0",
+    "remark-math": "^4.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
