--- a/sagittarius_a/package.json
+++ b/sagittarius_a/package.json
@@ -11,7 +11,7 @@
     "@matejmazur/react-katex": "^3.1.3",
     "framer-motion": "^4.1.17",
     "katex": "^0.13.11",
-    "next": "latest",
+    "next": "^11.1.2",
     "popmotion": "^9.3.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
